# C7F-W3B-Q1LL3R

./: .gitignore  Makefile  README.md  THIRD_PARTY_NOTICES.md  compose.yaml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_agent_loop_fields.py  0003_skills_chat_traffic.py  0004_reconcile_chat_summary.py  0005_solver_methodology_flow.py  0006_flag_review_states.py  0007_run_skill_recommendations.py  0008_provider_profiles_agent_turns.py  0009_skill_catalog_scope.py  0010_skill_negative_triggers.py  0011_learned_skill_candidates.py  0012_run_attempts.py  0013_run_execution_leases.py  0014_solver_recovery_controls.py  0015_solver_workspace_and_logical_tools.py  0016_multi_chain_solver_controls.py  0017_terminal_tool_tickets.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  exceptions.py
backend/app/engines/: __init__.py  action_adapter.py  base.py  codex_bridge.py  mock.py  openai_compatible.py  retry.py
backend/app/models/: __init__.py  base.py  challenge.py  conversation.py  learned_skill.py  model_config.py  run.py  skill.py  solver_state.py
backend/tests/: test_agent_loop.py  test_codex_bridge_engine.py  test_control_loop_resilience.py  test_core.py  test_event_stream.py  test_flag_extraction.py  test_provider_resilience.py  test_run_deletion.py  test_skills_and_traffic.py  test_solver_control_regression.py  test_solver_methodology_flow.py  test_tool_definitions.py  test_tool_ticket_concurrency.py  test_workspace_capabilities.py
docs/: api.md  (+12 more)
(+237 files in other folders)
